istio/demo-wordpress.gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wordpress-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-wordpress
spec:
  hosts:
  - "*"
  gateways:
  - wordpress-gateway
  http:
  - route:
    - destination:
        host: demo-wordpress
        port:
          number: 80
